--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,76 @@
-
+#global-header {
+    border: 1px solid #dddddd;
+    background: white;
+    box-shadow: inset 0 0 100px #f5f5f5;
+    border-color: #dddddd;
+    display: block;
+}
+#global-header nav {
+    position: relative;
+    display: block;
+    padding: 10px 200px 10px 25px;
+    margin: auto;
+    /*max-width: 950px;*/
+}
+#global-header .nav-links, #global-header .nav-links li, #global-header a.logo {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+#global-header a.logo {
+    margin-right: 25px;
+}
+#global-header .nav-links li a {
+    border: 1px solid transparent;
+    color: #777777;
+    display: block;
+    padding: 17px 15px 12px;
+    margin-top: -14px;
+    text-transform: lowercase;
+    border-radius: 4px;
+}
+#global-header .nav-links li a:hover, #global-header .nav-links li.selected a {
+    color: black;
+    background: white;
+    border: 1px solid #dddddd;
+    box-shadow: 3px 3px 20px -3px #d5d5d5;
+}
+#main {
+    color: black;
+    background: white;
+    border: 1px solid #DDD;
+    box-shadow: 3px 3px 20px -3px #d5d5d5;
+    position: relative;
+    min-width: 400px;
+    max-width: 1024px;
+    margin: 4em auto;
+    min-height: 400px;
+    box-shadow: 5px 5px 50px -5px #d5d5d5;
+    word-wrap: break-word;
+}
+#main .main-content {
+    padding: 20px 70px 20px 50px;
+}
+.main-content {
+    position: relative;
+    padding: 40px;
+}
+.sparcet-list {
+    margin-top: 30px;
+}
+.sparcet-list li {
+    padding-bottom: 1em;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #DDD;
+}
+.sparcet-detail {
+    position: relative;
+    font-size: 1.05em;
+    margin: 0 80px;
+    background: #E0EEFF;
+    border: 1px solid #9BCBFF;
+    padding: 30px 30px 10px;
+    border-radius: 10px;
+    box-shadow: inset 0 -50px 50px #c1deff;
+}
 
