--- a/css/styles.css
+++ b/css/styles.css
@@ -1,65 +1,69 @@
-#global-header {
-    border: 1px solid #dddddd;
-    background: white;
-    box-shadow: inset 0 0 100px #f5f5f5;
-    border-color: #dddddd;
-    display: block;
+body {
+    min-width:500px;
+    font-family: Arial, Sans-Serif;
+    line-height: 1;
 }
-#global-header nav {
-    position: relative;
-    display: block;
-    padding: 10px 200px 10px 25px;
-    margin: auto;
-    /*max-width: 950px;*/
+h1, h2 {
+    margin-bottom: .4em;
 }
-#global-header .nav-links, #global-header .nav-links li, #global-header a.logo {
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 10px;
+h1 {
+    color: #505050;
+    font-size: 1.7em;
 }
-#global-header a.logo {
-    margin-right: 25px;
+h2 {
+    color: #4084f2;
+    font-size: 1.5em;
 }
-#global-header .nav-links li a {
-    border: 1px solid transparent;
+h3 {
+    color: #555;
+    font-size: 1.4em;
+    margin-bottom: .8em;
+}
+p {
+    margin-bottom: 2em;
     color: #777777;
-    display: block;
-    padding: 17px 15px 12px;
-    margin-top: -14px;
-    text-transform: lowercase;
-    border-radius: 4px;
 }
-#global-header .nav-links li a:hover, #global-header .nav-links li.selected a {
-    color: black;
-    background: white;
-    border: 1px solid #dddddd;
-    box-shadow: 3px 3px 20px -3px #d5d5d5;
+a {
+    color: #245BAD;
 }
+ul {
+    padding:0px;
+    margin:0px;
+}
+#global-header {
+    width:100%;
+    margin: 0 auto;
+    padding: 0px;
+
+}
+
 #main {
     color: black;
     background: white;
     border: 1px solid #DDD;
     box-shadow: 3px 3px 20px -3px #d5d5d5;
     position: relative;
+    width: 70%;
     min-width: 400px;
-    max-width: 1024px;
     margin: 4em auto;
     min-height: 400px;
     box-shadow: 5px 5px 50px -5px #d5d5d5;
     word-wrap: break-word;
 }
 #main .main-content {
-    padding: 20px 70px 20px 50px;
+    padding: 20px;
 }
 .main-content {
     position: relative;
-    padding: 40px;
+    padding: 10px;
 }
 .sparcet-list {
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-left: 0px;
 }
 .sparcet-list li {
     padding-bottom: 1em;
+    margin-left: 0px;
     margin-bottom: 30px;
     border-bottom: 1px solid #DDD;
 }
@@ -69,8 +73,39 @@
     margin: 0 80px;
     background: #E0EEFF;
     border: 1px solid #9BCBFF;
-    padding: 30px 30px 10px;
+    padding: 10px 10px 5px;
     border-radius: 10px;
     box-shadow: inset 0 -50px 50px #c1deff;
+}
+.sparcet-detail .profile-pic {
+    position: absolute;
+    bottom: 0px;
+    right: -60px;
+}
+.profile-pic {
+    max-height: 50px;
+    max-width: 50px;
+}
+.profile-pic {
+    background: white;
+    padding: 5px;
+    box-shadow: 0 0 10px #999999;
+}
+.sparcet-summary .profile-pic, .sparcet-summary .award {
+    float: left;
+    margin-right: 20px;
+}
+.sparcet-summary .name.to-user {
+    color: black;
+    padding: .25em 0;
+    /*display: block;*/
+    font-size: 1.2em;
+}
+.logo {padding:15px;}
+.result {margin-bottom: 50px;}
+.main-header {
+    position: relative;
+    border-bottom: 1px solid #DFDFDF;
+    padding: 10px 10px 10px;
 }
 
