--- a/css/styles.css
+++ b/css/styles.css
@@ -75,8 +75,14 @@ ul {
     background: #E0EEFF;
     border: 1px solid #9BCBFF;
     padding: 10px 10px 5px;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: inset 0 -50px 50px #c1deff;
+}
+.sparcet-detail:after {
+    content: url(../img/blue-speech-arrow.png);
+    position: absolute;
+    bottom: 20px;
+    right: -12px;
 }
 .sparcet-detail .profile-pic {
     position: absolute;
@@ -111,5 +117,15 @@ ul {
     border-bottom: 1px solid #DFDFDF;
     width:95%;
     padding: 10px 10px 10px;
+}
+hr {
+    background-color:#f5f5f5;
+    border-width:0;
+    color:#444;
+    height:2px;
+    line-height:0;
+    margin-bottom: 25px;
+    margin-top: 15px;
+    width:90%;
 }
 
