--- a/css/styles.css
+++ b/css/styles.css
@@ -1,131 +1,25 @@
-body {
-    min-width:500px;
-    font-family: Arial, Sans-Serif;
-    line-height: 1;
-    overflow-x: hidden;
-}
-h1, h2 {
-    margin-bottom: .4em;
-}
-h1 {
-    color: #505050;
-    font-size: 1.7em;
-}
-h2 {
-    color: #4084f2;
-    font-size: 1.5em;
-}
-h3 {
-    color: #555;
-    font-size: 1.4em;
-    margin-bottom: .8em;
-}
-p {
-    margin-bottom: 2em;
-    color: #777777;
-}
-a {
-    color: #245BAD;
-}
-ul {
-    padding:0px;
-    margin:0px;
-}
-#global-header {
-    width:90%;
-    margin: 0 auto;
-    padding: 0px;
-
-}
-
-#main {
-    color: black;
-    background: white;
-    border: 1px solid #DDD;
-    box-shadow: 3px 3px 20px -3px #d5d5d5;
-    position: relative;
-    width: 70%;
-    min-width: 400px;
-    margin: 4em auto;
-    min-height: 400px;
-    box-shadow: 5px 5px 50px -5px #d5d5d5;
-    word-wrap: break-word;
-}
-#main .main-content {
-    padding: 20px;
-}
-.main-content {
-    position: relative;
-    padding: 10px;
-}
-.sparcet-list {
-    margin-top: 20px;
-    margin-left: 0px;
-}
-.sparcet-list li {
-    padding-bottom: 1em;
-    margin-left: 0px;
-    margin-bottom: 30px;
-    border-bottom: 1px solid #DDD;
-}
-.sparcet-detail {
-    position: relative;
-    font-size: 1.05em;
-    margin: 0 80px;
-    background: #E0EEFF;
-    border: 1px solid #9BCBFF;
-    padding: 20px 30px 25px;
-    border-radius: 5px;
-    box-shadow: inset 0 -50px 50px #c1deff;
-}
-.sparcet-detail:after {
-    content: url(../img/blue-speech-arrow.png);
-    position: absolute;
-    bottom: 20px;
-    right: -12px;
-}
-.sparcet-detail .profile-pic {
-    position: absolute;
-    bottom: 0px;
-    right: -60px;
-}
-.profile-pic {
-    max-height: 50px;
-    max-width: 50px;
-}
-.profile-pic {
-    background: white;
-    padding: 5px;
-    box-shadow: 0 0 10px #999999;
-}
-.sparcet-summary .profile-pic, .sparcet-summary .award {
-    float: left;
-    margin-right: 20px;
-}
-.sparcet-summary .name.to-user {
-    color: black;
-    padding: .25em 0;
-    /*display: block;*/
-    font-size: 1.2em;
-}
+body {min-width:525px;font-family: Arial, Sans-Serif;line-height: 1;overflow-x: hidden;}
+h1, h2 {margin-bottom: .4em;}
+h1 {color: #505050;font-size: 1.7em;}
+h2 {color: #4084f2;font-size: 1.5em;}
+h3 {color: #555;font-size: 1.4em;margin-bottom: .8em;}
+p {margin-bottom: 2em;color: #777777;}
+a {color: #245BAD;}
+ul {padding:0px;margin:0px;}
+#global-header {width:90%;margin: 0 auto;padding: 0px;}
+#main {color: black;background: white;border: 1px solid #DDD;box-shadow: 3px 3px 20px -3px #d5d5d5;position: relative;width: 70%;min-width: 400px;margin: 4em auto;min-height: 400px;box-shadow: 5px 5px 50px -5px #d5d5d5;word-wrap: break-word;}
+#main .main-content {padding: 20px;}
+.main-content {position: relative;padding: 10px;}
+.sparcet-list {margin-top: 20px;margin-left: 0px;}
+.sparcet-list li {padding-bottom: 1em;margin-left: 0px;margin-bottom: 30px;border-bottom: 1px solid #DDD;}
+.sparcet-detail {position: relative;font-size: 1.05em;margin: 0 80px;background: #E0EEFF;border: 1px solid #9BCBFF;padding: 20px 30px 25px;border-radius: 5px;box-shadow: inset 0 -50px 50px #c1deff;}
+.sparcet-detail:after {content: url(../img/blue-speech-arrow.png);position: absolute;bottom: 20px;right: -12px;}
+.sparcet-detail .profile-pic {position: absolute;bottom: 0px;right: -60px;}
+.profile-pic {max-height: 50px;max-width: 50px;}
+.profile-pic {background: white;padding: 5px;box-shadow: 0 0 10px #999999;}
+.sparcet-summary .profile-pic, .sparcet-summary .award {float: left;margin-right: 20px;}
+.sparcet-summary .name.to-user {color: black;padding: .25em 0;font-size: 1.2em;}
 .logo {padding:5px;}
-.result {
-
-    margin-bottom: 50px;}
-.main-header {
-    position: relative;
-    border-bottom: 1px solid #DFDFDF;
-    width:95%;
-    padding: 10px 10px 10px;
-}
-hr {
-    background-color:#f5f5f5;
-    border-width:0;
-    color:#444;
-    height:2px;
-    line-height:0;
-    margin-bottom: 25px;
-    margin-top: 15px;
-    width:90%;
-}
-
+.result {margin-bottom: 50px;}
+.main-header {position: relative;border-bottom: 1px solid #DFDFDF;width:95%;padding: 10px 10px 10px;}
+hr {background-color:#f5f5f5;border-width:0;color:#444;height:2px;line-height:0;margin-bottom: 25px;margin-top: 15px;width:90%;}
