--- a/css/styles.css
+++ b/css/styles.css
@@ -23,3 +23,4 @@ ul {padding:0px;margin:0px;}
 .result {margin-bottom: 50px;}
 .main-header {position: relative;border-bottom: 1px solid #DFDFDF;width:95%;padding: 10px 10px 10px;}
 hr {background-color:#f5f5f5;border-width:0;color:#444;height:2px;line-height:0;margin-bottom: 25px;margin-top: 15px;width:90%;}
+#ajaxloader {text-align: center;}
